--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                         <a class="social-icon" href="https://twitter.com/nikairball"><i class="fab fa-twitter"></i></a>
                     
                     </div>
-                    <h1>This domain, along with a portfolio of Nik Airball related domains are for sale on GoDaddy and NameCheap</h1>
-                    <h2>Own nikairball.com, airballaji.com, nikairball.poker and many more...</h2>
-                   <h3>Own Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</h3>
+                    <h3 class="text-success">This domain, along with a portfolio of Nik Airball related domains are for sale on GoDaddy and NameCheap</h1>
+                    <p>Own nikairball.com, airballaji.com, nikairball.poker and many more...</p>
+                   <p>Own Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
                     <p>Call 562-253-2480, and speak with Juan. Total portfolio for sale price: $3,500. Estimated Value: $47,922.54 by GoDaddy/Domain Brokerage Services</p>
                 </div>
             </section>
