--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                         <a class="social-icon" href="https://twitter.com/nikairball"><i class="fab fa-twitter"></i></a>
                     
                     </div>
-                    <h3 class="text-success">This domain, along with a portfolio of Nik Airball related domains are for sale on GoDaddy and NameCheap</h1>
-                    <p>Own nikairball.com, airballaji.com, nikairball.poker and many more...</p>
-                   <p>Own Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
-                    <p>Call 562-253-2480, and speak with Juan. Total portfolio for sale price: $3,500. Estimated Value: $47,922.54 by GoDaddy/Domain Brokerage Services</p>
+                    <h3 class="text-danger">This domain is for sale!</h1>
+                    <p>Own all of Nik Airball's most valuable domains/digital assets such as nikairball.com, airballaji.com, nikairball.poker and many more...</p>
+                   <p>You will also get all his social media handles such as Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
+                    <p>Email nikairball1@gmail.com if you are interested in purchasing all of these domains. Total portfolio (12+ accounts) for sale price: $2,200. Estimated Value: $47,922.54 by GoDaddy/Domain Brokerage Services</p>
                 </div>
             </section>
             <hr class="m-0" />
