--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h3 class="text-danger">This domain is for sale!</h1>
                     <p>Own all of Nik Airball's most valuable domains/digital assets such as nikairball.com, airballaji.com, nikairball.poker and many more...</p>
                    <p>You will also get all his social media handles such as Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
-                    <p>Email nikairball1@gmail.com if you are interested in purchasing all of these domains and social media handles. Total portfolio (own everything) sale price: $4,000 (Own it all). </p> 
+                    <p>Email nikairball1@gmail.com if you are interested in purchasing all of these domains and social media handles. Total portfolio (own everything) sale price: $4,000.</p> 
                     <i>Estimated Portfolio Value: $47,922.54* by GoDaddy/Domain Brokerage Services as of March 24, 2023 (*domain values may fluctuate)</i>
                 </div>
             </section>
