--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <p>Own all of Nik Airball's most valuable domains/digital assets such as nikairball.com, airballaji.com, nikairball.poker and many more...</p>
                    <p>You will also get all his social media handles such as Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
                     <p>Email nikairball1@gmail.com if you are interested in purchasing all of these domains and social media handles. Total portfolio (own everything) sale price: $4,000.</p> 
-                    <i>Estimated Portfolio Value: $47,922.54* by GoDaddy/Domain Brokerage Services as of March 24, 2023 (*domain values may fluctuate)</i>
-                    <ul>THIS DOMAIN IS OWNED BY A PRIVATE BROKERAGE SERVICE IN OPERATIONS WITH GODADDY AND NAME CHEAP. THIS DOMAIN DOES NOT BELONG TO NIK AIRBALL. IF YOU ARE NIK ARIBALL, AND WANT TO PURCHASE THIS PORTFOLIO, PLEASE MESSAGE US NIKAIRBALL1@GMAIL.COM</ul>
+                    <i>Estimated Portfolio Value: $47,922.54* by GoDaddy/Domain Brokerage Services as of March 24, 2023 (*domain values may fluctuate)</i><br><br>
+                    <ul>THIS DOMAIN IS OWNED AND BEING SOLD BY A PRIVATE BROKERAGE SERVICE IN OPERATIONS WITH GODADDY AND NAMECHEAP RESELLER PROGRAM. THESE DOMAIN AND ACCOUNTS DO NOT BELONG TO NIK AIRBALL OR HIS AFFILIATES.</ul>
                 </div>
             </section>
             <hr class="m-0" />
