--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
                     
                     </div>
                     <h3 class="text-danger">This domain is for sale!</h1>
-                    <p>Buy and own all of Nik Airball's most valuable domains/digital assets such as nikairball.com, airballaji.com, nikairball.poker and many more...</p>
+                    <p>Buy and own all of Nik Airball's most valuable domains/digital assets. You get:</p> 
+                    <ul class="list-group">
+  <li class="list-group-item">nikairball.com</li>
+  <li class="list-group-item">nikairball.poker</li>
+  <li class="list-group-item">airballaji.com</li>
+  <li class="list-group-item">airballajitv.com</li>
+  <li class="list-group-item">airballaji.tv</li>
+                          <li class="list-group-item">and many more...</li>
+</ul>
+                    
                    <p>You will also get all of his social media handles such as Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
-                    <p>Email <span style="Color:red"> NIKAIRBALL1@GMAIL.COM</span> if you are interested in purchasing all of these domains and social media handles. Total portfolio (own everything) sale price: $4,000.</p> 
+                    <p>Email <span style="Color:red"> NIKAIRBALL1@GMAIL.COM</span> if you are interested.</p> 
+                        <p>Total portfolio (own everything) sale price: $4,000.</p> 
                     <i>Estimated Portfolio Value: $47,922.54* by GoDaddy/Domain Brokerage Services as of March 24, 2023 (*domain values may fluctuate)</i><br><br>
                     <ul>THIS DOMAIN, AND THE ENTIRE DIGITAL ASSET PORTFOLIO, IS OWNED AND BEING SOLD BY A PRIVATE BROKERAGE SERVICE IN OPERATIONS WITH GODADDY AND NAMECHEAP RESELLER PROGRAM. THESE DOMAINS AND ACCOUNTS DO NOT BELONG TO NIK AIRBALL OR HIS AFFILIATES.</ul>
                 </div>
