--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a class="social-icon" href="https://twitter.com/nikairball"><i class="fab fa-twitter"></i></a>
                     
                     </div>
-                    <h3 class="text-danger">This domain is for sale!</h1> <h2 class="text-danger">Big Package Deal<h2>
+                    <h3 class="text-danger">This domain is for sale!</h1> <h2 class="text-danger">Big Package Deal</h2>
                     <p>Buy and own all of Nik Airball's most valuable domains/digital assets. You get:</p> 
                     <ul class="list-group">
   <li class="list-group-item">nikairball.com</li>
