--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <br>
                     <br>
                     
-                    <p>Buy and Own All Of Nik Airball's most valuable social media handles</p> such as Youtube @nikairball, Reddit @nikairball, OpenSea @nikairball, Twitter @airballaji, Instagram @airballaji, and many more...</p>
+                    <p>Buy and Own All Of Nik Airball's most valuable social media handles</p>
                                        <ul class="list-group">
   <li class="list-group-item">Youtube @nikairball</li>
   <li class="list-group-item">Reddit @nikairball / @airballaji</li>
